--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
       "forceConsistentCasingInFileNames": true,
       "outDir": "./dist"
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "jest.config.js"],
     "exclude": ["node_modules"]
   }
